Added a buffered FMF format
* Here, everything is first recorded to RAM memory in a big vector. This
is written to disk when clicking 'stop recording'.
* During this writing time, I have to stop emitting signals (with
images) to the display queue, otherwise RAM fills up quickly!

--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -347,11 +347,16 @@
                </size>
               </property>
               <property name="currentIndex">
-               <number>0</number>
+               <number>1</number>
               </property>
               <item>
                <property name="text">
                 <string>FMF</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>BUF-FMF</string>
                </property>
               </item>
               <item>
