--- a/interferoplugindialog.ui
+++ b/interferoplugindialog.ui
@@ -19,6 +19,13 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout">
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Skip frames</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="0" colspan="3">
       <widget class="QCheckBox" name="activateBox">
        <property name="text">
@@ -26,20 +33,25 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Threshold</string>
+     <item row="2" column="1" colspan="2">
+      <widget class="QSlider" name="skipSlider">
+       <property name="maximum">
+        <number>10</number>
        </property>
-      </widget>
-     </item>
-     <item row="3" column="1" colspan="2">
-      <widget class="QSlider" name="MaxDiameter">
+       <property name="pageStep">
+        <number>1</number>
+       </property>
        <property name="value">
-        <number>50</number>
+        <number>0</number>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="tickPosition">
+        <enum>QSlider::TicksBelow</enum>
+       </property>
+       <property name="tickInterval">
+        <number>1</number>
        </property>
       </widget>
      </item>
@@ -56,40 +68,55 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_3">
+     <item row="1" column="0">
+      <widget class="QLabel" name="label">
        <property name="text">
-        <string>Min Diameter</string>
+        <string>Subsampling</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1" colspan="2">
-      <widget class="QSlider" name="MinDiameter">
-       <property name="value">
-        <number>50</number>
+     <item row="1" column="1">
+      <widget class="QSlider" name="subsampleSlider">
+       <property name="minimum">
+        <number>1</number>
        </property>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+       <property name="maximum">
+        <number>10</number>
        </property>
-      </widget>
-     </item>
-     <item row="1" column="1" colspan="2">
-      <widget class="QSlider" name="thresholdSlider">
        <property name="pageStep">
         <number>1</number>
        </property>
-       <property name="value">
-        <number>50</number>
-       </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="tickPosition">
+        <enum>QSlider::TicksBelow</enum>
+       </property>
+       <property name="tickInterval">
+        <number>1</number>
        </property>
       </widget>
      </item>
      <item row="3" column="0">
-      <widget class="QLabel" name="label_4">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="5" column="0" colspan="2">
+      <widget class="QLabel" name="fringeLabel">
        <property name="text">
-        <string>Max Diameter</string>
+        <string>Fringe spacing ? and angle ?</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
