--- a/interferoplugindialog.ui
+++ b/interferoplugindialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Ellipse Detection</string>
+   <string>Interferogram Analysis</string>
   </property>
   <property name="windowOpacity">
    <double>0.800000000000000</double>
